--- a/Czech/device/whyred/framework-res.apk/res/values-cs/arrays.xml
+++ b/Czech/device/whyred/framework-res.apk/res/values-cs/arrays.xml
@@ -37,16 +37,6 @@
         <item>Ostatní</item>
         <item>Vlastní</item>
     </string-array>
-    <string-array name="wfcOperatorErrorAlertMessages">
-        <item>Chcete-li volat a odesílat textové zprávy přes síť Wi-Fi, nejprve požádejte operátora, aby vám tuto službu nastavil. Poté volání přes Wi-Fi opět zapněte v Nastavení.</item>
-    </string-array>
-    <string-array name="wfcOperatorErrorNotificationMessages">
-        <item>Registrace u operátora</item>
-    </string-array>
-    <string-array name="wfcSpnFormats">
-        <item>%s</item>
-        <item>Volání přes Wi-Fi: %s</item>
-    </string-array>
     <array name="fingerprint_acquired_vendor" />
     <array name="fingerprint_error_vendor" />
     <string-array name="imAddressTypes">
@@ -61,5 +51,15 @@
         <item>Bluetooth</item>
         <item>Ethernet</item>
         <item>VPN</item>
+    </string-array>
+    <string-array name="wfcOperatorErrorAlertMessages">
+        <item>Chcete-li volat a odesílat SMS přes síť Wi-Fi, nejprve požádejte operátora, aby vám tuto službu nastavil. Poté volání přes Wi-Fi opět zapněte v Nastavení. (Kód chyby: %1$s)</item>
+    </string-array>
+    <string-array name="wfcOperatorErrorNotificationMessages">
+        <item>Při registraci volání přes Wi-Fi u operátora %1$s došlo k chybě</item>
+    </string-array>
+    <string-array name="wfcSpnFormats">
+        <item>%s</item>
+        <item>Volání přes Wi-Fi: %s</item>
     </string-array>
 </resources>
